# mesa

./: configure.ac  meson.build  meson_options.txt
.gitlab-ci/piglit/: cl.txt
docs/: dependencies.rst  features.txt
docs/relnotes/: 18.2.0.html
include/: meson.build
src/: meson.build
src/amd/compiler/: aco_instruction_selection.cpp
src/amd/llvm/: ac_nir_to_llvm.c
src/amd/vulkan/: Android.mk  Makefile.am  meson.build  radv_device.c  radv_entrypoints_gen.py  radv_extensions.py  radv_extensions_gen.py  radv_icd.py  radv_meta_buffer.c  radv_meta_bufimage.c  radv_meta_clear.c  radv_meta_fast_clear.c  radv_private.h  radv_query.c  radv_shader.c  radv_wsi.c
src/broadcom/compiler/: nir_to_vir.c  vir.c
src/compiler/: Makefile.sources  glsl_types.cpp  glsl_types.h  nir_types.cpp  nir_types.h  shader_enums.c  shader_enums.h  shader_info.h
src/compiler/glsl/: glsl_to_nir.cpp
src/compiler/nir/: meson.build  nir.c  nir.h  nir_builder.h  nir_builder_opcodes_h.py  nir_builtin_builder.c  nir_builtin_builder.h  nir_clone.c  nir_constant_expressions.py  nir_control_flow.c  nir_deref.c  nir_gather_info.c  nir_instr_set.c  nir_intrinsics.py  nir_lower_alpha_test.c  nir_lower_alu.c  nir_lower_alu_to_scalar.c  nir_lower_atomics.c  nir_lower_bit_size.c  nir_lower_clip.c  nir_lower_double_ops.c  nir_lower_goto_ifs.c  nir_lower_io.c  nir_lower_io_to_scalar.c  nir_lower_load_const_to_scalar.c  nir_lower_locals_to_regs.c  nir_lower_samplers.c  nir_lower_samplers_as_deref.c  nir_lower_ssbo.c  nir_lower_subgroups.c  nir_lower_system_values.c  nir_lower_two_sided_color.c  nir_lower_vars_to_ssa.c  nir_lower_wpos_center.c  nir_opcodes.py  nir_opcodes_c.py  nir_opcodes_h.py  nir_opt_algebraic.py  nir_opt_constant_folding.c  nir_opt_copy_prop_vars.c  (+9 more)
src/compiler/spirv/: nir_spirv.h  spirv_to_nir.c  spirv_to_nir_cl.c  vtn_alu.c  vtn_cfg.c  vtn_glsl450.c  vtn_opencl.c  vtn_private.h  vtn_subgroup.c  vtn_variables.c
src/freedreno/ir3/: ir3_compiler_nir.c  ir3_nir.c
src/freedreno/vulkan/: tu_shader.c
src/gallium/: meson.build
src/gallium/auxiliary/: Makefile.sources
src/gallium/auxiliary/driver_ddebug/: dd_context.c
src/gallium/auxiliary/gallivm/: lp_bld_limits.h  lp_bld_nir.c
src/gallium/auxiliary/hud/: hud_context.c  hud_private.h  hud_sysfs.c
src/gallium/auxiliary/nir/: tgsi_to_nir.c
src/gallium/auxiliary/tgsi/: tgsi_exec.h  tgsi_lowering.h  tgsi_scan.h
src/gallium/auxiliary/util/: u_math.h  u_pstipple.c  u_screen.c  u_threaded_context.c
src/gallium/docs/source/: screen.rst
src/gallium/drivers/etnaviv/: etnaviv_screen.c
src/gallium/drivers/freedreno/: freedreno_screen.c  freedreno_screen.h  freedreno_state.c
src/gallium/drivers/freedreno/a5xx/: fd5_compute.c  fd5_compute.h  fd5_program.c  fd5_screen.c
src/gallium/drivers/freedreno/ir3/: ir3_cmdline.c  ir3_compiler_nir.c  ir3_shader.c  ir3_shader.h
src/gallium/drivers/i915/: i915_screen.c
src/gallium/drivers/iris/: iris_screen.c  iris_state.c
src/gallium/drivers/llvmpipe/: lp_screen.c  lp_state_cs.c
src/gallium/drivers/nouveau/: meson.build  nouveau_buffer.c  nouveau_context.h  nouveau_fence.c  nouveau_fence.h  nouveau_screen.c  nouveau_screen.h
src/gallium/drivers/panfrost/: pan_compute.c
src/gallium/drivers/r300/: r300_screen.c
src/gallium/drivers/r600/: evergreen_compute.c  r600_pipe.c  r600_pipe_common.c
src/gallium/drivers/radeonsi/: si_compute.c  si_get.c  si_pipe.c
src/gallium/drivers/softpipe/: sp_screen.c
src/gallium/drivers/svga/: svga_screen.c
src/gallium/drivers/swr/: swr_screen.cpp
src/gallium/drivers/tegra/: tegra_context.c
src/gallium/drivers/v3d/: v3d_screen.c
src/gallium/drivers/vc4/: vc4_screen.c
src/gallium/drivers/vc5/: vc5_screen.c
src/gallium/drivers/virgl/: virgl_screen.c
src/gallium/frontends/rusticl/: meson.build  rusticl_mesa_bindings.h  rusticle_opencl_bindings.h
src/gallium/frontends/rusticl/api/: bindings.rs  context.rs  device.rs  icd.rs  mod.rs  platform.rs  types.rs  util.rs
src/gallium/frontends/rusticl/core/: device.rs  mod.rs  version.rs
src/gallium/frontends/rusticl/mesa/pipe/: device.rs  mod.rs  screen.rs
src/gallium/frontends/rusticl/util/: properties.rs  string.rs
src/gallium/include/pipe/: p_context.h  p_defines.h  p_screen.h  p_state.h
src/gallium/state_trackers/clover/: meson.build
src/gallium/targets/opencl/: meson.build
src/gallium/targets/pipe-loader/: meson.build  pipe_iris.c
src/gallium/targets/rusticl/: meson.build  rusticl.icd.in
src/gallium/tests/trivial/: compute.c
src/glx/: glxcmds.c
src/intel/: Android.vulkan.mk  Makefile.vulkan.am
src/intel/blorp/: blorp_blit.c  blorp_clear.c
src/intel/compiler/: brw_compiler.c  brw_compiler.h  brw_fs.cpp  brw_fs_nir.cpp  brw_nir.c  brw_nir_lower_cs_intrinsics.c
src/intel/vulkan/: anv_device.c  anv_entrypoints_gen.py  anv_extensions.py  anv_extensions_gen.py  anv_nir_apply_pipeline_layout.c  anv_pipeline.c  anv_private.h  meson.build
src/loader/: loader.c  loader.h
src/mesa/: Makefile.sources  SConscript  meson.build
src/mesa/drivers/dri/i965/: brw_context.c  (+5 more)
src/mesa/main/: config.h  format_utils.c  getstring.c  glformats.c  glformats.h  glformats.py  glformats_info.h  glformats_info_c.py  glspirv.c  mtypes.h  teximage.c  texstate.c  uniform_query.cpp  uniforms.c
src/mesa/program/: prog_instruction.h  prog_print.c  prog_to_nir.c  program.c
src/mesa/state_tracker/: st_atom_texture.c  st_cb_copyimage.c  st_extensions.c  st_glsl_to_nir.cpp  st_glsl_to_tgsi.cpp  st_glsl_to_tgsi_private.h
src/nouveau/: meson.build
src/nouveau/vulkan/: meson.build  nouv_device.c  nouv_entrypoints_gen.py  nouv_extensions.py  nouv_extensions_gen.py  nouv_formats.c  nouv_icd.py  nouv_private.h  nouv_util.c  nouv_wsi.c
src/nouveau/vulkan/winsys/nouveau/: nouveau_winsys.c  nouveau_winsys_public.h
src/nouveau/ws/: bo.c  bufctx.c  priv.h  pushbuf.c
src/panfrost/bifrost/: bifrost_compile.c
src/util/: bitscan.h  blob.c  blob.h  format_r11g11b10f.h  set.c
src/vulkan/: Makefile.am
src/vulkan/util/: meson.build  vk_entrypoints_gen.py  vk_extensions.py  vk_extensions_gen.py
(+166 files in other folders)
